parser3.peg
start
  = block

block
  = "[" space a:(serries)* "]" { a.unshift("block"); return a}

serries
  = a:(block / number / setword / coword / ciword / word / ctxword / string) space {return a}

space
  = [ \n\t]+

setword
  = w:anychar+ ":" {return ["setword",w.join("")]}

coword
  = w:anychar+ ">" {return ["coword",w.join("")]}

ciword
  =  ">" w:anychar+ {return ["ciword",w.join("")]}


ctxword
  = "!" w:anychar+ {return ["callword",w.join("")]}

word
  = w:anychar+ {return ["word",w.join("")]}

string
  = "'" t:(anychar+) "'" {return ["string",t.join("")]}

number
  = d:[0-9]+ {return ["number",parseInt(d.join(""),10)]}

anychar
  = [a-zA-Z0-9_\-\?]
